--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -2,21 +2,35 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('@/assets/css/font.css');
+@import url("@/assets/css/font.css");
 
 ::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-    background-color: transparent;
+  width: 8px;
+  height: 8px;
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #b3b3b3;
-    border-radius: 8px;
-    border: 1px solid transparent;
-    background-clip: content-box;
+  background-color: #b3b3b3;
+  border-radius: 8px;
+  border: 1px solid transparent;
+  background-clip: content-box;
 }
 
 ::-webkit-scrollbar-track {
-    background-color: transparent;
+  background-color: transparent;
+}
+
+.signature-canvas {
+  width: 100%;
+  height: 150px;
+}
+
+@media print {
+  .a4 {
+    width: 210mm;
+    height: 297mm;
+    padding: 20mm;
+    box-sizing: border-box;
+  }
 }
